--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -5,9 +5,9 @@
 	<title>QUnit test suite for Todo App</title>
 	<script
 		src="../resources/sap/ui/test/starter/createSuite.js"
-		data-sap-ui-testsuite="test-resources/sap/ui/demo/todo/testsuite.qunit"
+		data-sap-ui-testsuite="test-resources/my/app/testsuite.qunit"
 		data-sap-ui-resource-roots='{
-			"test-resources.sap.ui.demo.todo": "./"
+			"test-resources.my.app": "./"
 		}'
 	></script>
 </head>
