--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,23 +3,25 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>OpenUI5 Todo App</title>
+	<title>Sample App</title>
 	<link rel="icon" href="data:,">
 	<script id="sap-ui-bootstrap"
-		src="resources/sap-ui-core.js"
-		data-sap-ui-libs="sap.m"
+		src="https://ui5.sap.com/resources/sap-ui-core.js"
+		data-sap-ui-libs="sap.m, sap.f, sap.tnt"
 		data-sap-ui-xx-wait-for-theme="true"
 		data-sap-ui-theme="sap_horizon"
 		data-sap-ui-resource-roots='{
-			"sap.ui.demo.todo": "./"
+			"my.app": "./"
 		}'
 		data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
 		data-sap-ui-compat-version="edge"
 		data-sap-ui-async="true">
-	</script>
+	</script> 
+	<script src="https://ui5.sap.com/resources/sap/tnt/library-preload.js"></script>
+
 </head>
 
 <body class="sapUiBody">
-	<div data-sap-ui-component data-name="sap.ui.demo.todo" data-id="container" data-settings='{"id" : "todo"}'></div>
+	<div data-sap-ui-component data-name="my.app" data-id="container"></div>
 </body>
 </html>
