--- a/webapp/test/Test.qunit.html
+++ b/webapp/test/Test.qunit.html
@@ -5,7 +5,7 @@
 	<script
 		src="../resources/sap/ui/test/starter/runTest.js"
 		data-sap-ui-resource-roots='{
-			"test-resources.sap.ui.demo.todo": "./"
+			"test-resources.my.app": "./"
 		}'
 	></script>
 </head>
