--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,6 +18,8 @@
 		data-sap-ui-async="true">
 	</script> 
 	<script src="https://ui5.sap.com/resources/sap/tnt/library-preload.js"></script>
+	<script src="https://ui5.sap.com/resources/sap/f/Breadcrumbs.js"></script>
+
 </head>
 
 <body class="sapUiBody">
