--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sample App</title>
 	<link rel="icon" href="data:,">
+	<link href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;300;400;700;900&family=Noto+Serif+Khmer:wght@100..900&display=swap&family=Siemreap&display=swap&family=Open+Sans:ital,wght@0,300..800;1,300..800" rel="stylesheet">
 	<script id="sap-ui-bootstrap"
 		src="https://ui5.sap.com/resources/sap-ui-core.js"
 		data-sap-ui-libs="sap.m, sap.f, sap.tnt"
